welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not found: type yellow
def faireV(c: yellow) {
              ^MethodsPicture:28: error: not found: value faireV
faireV(c: yellow)
^